--- a/Essentials/Essentials.csproj
+++ b/Essentials/Essentials.csproj
@@ -19,4 +19,7 @@
     <Folder Include="Views\" />
     <Folder Include="ViewModels\" />
   </ItemGroup>
+  <ItemGroup>
+    <None Remove=".DS_Store" />
+  </ItemGroup>
 </Project>
